added image responsive; passes 10/10 user stories test (freeCodeCamp)

--- a/styles/main.css
+++ b/styles/main.css
@@ -35,12 +35,14 @@ h1{
 }
 
 main{
-    position: absolute;
+    position: relative;
     background-color: #eeeeee;
-    top: 72px;
+    margin: 30px 8px;
+    margin-top: 102px;
     text-align: center;
     width: 100%;
     height: 100%;
+    overflow-y:scroll; 
 }
 
 /* ----------------------------- Navigation Bar ----------------------------- */
@@ -53,6 +55,7 @@ main{
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 2;
 }
 
 .logo{
@@ -190,15 +193,14 @@ main{
 }
 /* ---------------------------------- Main ---------------------------------- */
 
-main{
+/* main{
     margin-top: 30px 8px;
 
     position: relative;
-}
+} */
 
 main p{
     padding-bottom: 23px;
-
 }
 
 
@@ -211,8 +213,22 @@ main p{
     text-align: center;
 }
 
+
+.responsive{
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin: auto;
+    
+}
+
+
+
 #img-div{
     background-color: white;
+    margin-left: 15px;
+    margin-right: 15px;
+
 }
 
 section h3 {
@@ -244,7 +260,9 @@ section p{
     text-align: center;
     margin-top: 25px;
     padding-bottom: 50px;
+}
 
-
-
+#tribute-link{
+    color: #74638f;
+    text-decoration: underline;
 }
